# timestone-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  kaspi.kz_twin.json  kegoc_(kazakhstan_electricity_grid)_twin.json  ktz_scenarios.json  ktz_simulation_results.json  landing_preview.html  precisionmfg_inc_twin.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
data/: case_library.json  tenants.json
data/twins/: kegoc.json  ktz.json  ktz_full.json  techflow.json
docs/: architecture.md
docs/adr/: 001-layered-architecture.md  002-case-library-moat.md
examples/: full_demo.py
sdk/: client.py
site/: chat-mockup.html  index.html
src/api/: app.py  dashboard.py
src/auth/: security.py
src/connectors/: base.py  file_connectors.py  schema_mapper.py  warehouse_connectors.py
src/core/: bayesian_calibration.py  causal_graph.py  company_genome.py  temporal_engine.py
src/data/: synthetic_generator.py
src/discovery/: causal_discovery.py
src/intelligence/: claude_integration.py  insight_engine.py
src/models/: digital_twin.py  industry_templates.py  knowledge_graph.py  multi_company_generator.py
src/observability/: monitoring.py
src/persistence/: database.py  models.py  repositories.py
src/reporting/: case_study.py
src/rl/: strategy_optimizer.py
src/simulation/: advanced_monte_carlo.py  regime_detector.py  scenario_generator.py  sensitivity_analyzer.py
src/timestone/: __init__.py  __main__.py
src/timestone/application/: __init__.py  assess_company.py
src/timestone/domain/: __init__.py  case.py  company.py  outcome.py  report.py  scenario.py  simulation.py
src/timestone/infrastructure/: __init__.py  config.py  logging.py  paths.py
src/timestone/interfaces/: __init__.py  cli.py
src/timestone/interfaces/api/: __init__.py  app.py  auth.py  schemas.py  tenant_runs.py
src/timestone/interfaces/reports/: __init__.py  executive_pdf.py
src/timestone/interfaces/telegram/: __init__.py  bot.py
src/timestone/interfaces/web/: dashboard.py
src/timestone/repositories/: __init__.py  case_library.py  company.py  outcomes.py  results.py
src/timestone/services/: __init__.py  claude_scenarios.py  knowledge_retrieval.py  monte_carlo.py  recommendation.py  scenario_generation.py  sensitivity.py
src/validation/: benchmark_suite.py
tests/: conftest.py  test_api.py  test_core.py  test_enterprise.py  test_simulation.py
tests/integration/: test_assess_pipeline.py  test_pdf_report.py
tests/unit/: test_case_library.py  test_digital_twin.py  test_monte_carlo.py  test_scenario_generator.py
