[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timestone-ai"
version = "0.2.0"
description = "Evidence-based business transformation forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Arman Torebek", email = "arman.torebekk@gmail.com"}]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "anthropic>=0.39",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "streamlit>=1.40",
    "plotly>=5.20",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0"]

[project.scripts]
timestone = "timestone.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
